committed all changes